fix for the no objects found view on ml popup, font size change for smaller screen and fix for firefox zoom issue by the image list being too large

--- a/styles.css
+++ b/styles.css
@@ -322,7 +322,7 @@
 
 #machine-learning-popup-parent {
   position: absolute;
-	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
   font-size: 14.5px;
   line-height: 1.35;
   background-color: white;
@@ -549,6 +549,7 @@
 }
 
 .right-side-bar-component-title {
+  font-size: 16px;
   padding-left: 5px;
   border-bottom: solid;
   border-bottom-color: #4e4b4b26;
@@ -556,7 +557,7 @@
   user-select: none;
 }
 
-#labels-list-component {
+#right-side-bar-components {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -587,7 +588,7 @@
 #image-list-overflow-parent {
   overflow-x: hidden;
   overflow-y: auto;
-  height: calc((100vh + 120px) / 2);
+  max-height: calc((100vh + 120px) / 2 - 1px);
 }
 
 #image-list-overflow-parent div:nth-child(odd) {
